feat: rework dialog layouts with GridBagLayout and FlatLaf property-driven spacing
Replace ad-hoc dialog layouts with a consistent GridBagLayout-based Tab system
in BaseDialog. Add FlatLafProps/FlatLafKeys for typed UIManager property access,
replace the custom fontchooser package with a new JFontChooser-backed FontDialog,
and drive all dialog padding/gaps from FlatLaf.properties.

Closes #209

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>